# taxburst

./: .gitignore  404.html  LICENSE.txt  Makefile  README.md  build-html.py  command-line.html  developer.html  index.html  mkdocs.yml  pyproject.toml  quickstart.html
.github/workflows/: gh-pages.yml  python.yml
command-line/: index.html
developer/: index.html
doc/: README.md  command-line.md  developer.md  quickstart.md
doc/examples/: SRR11125891.summarized.html  SRR11125891.tax_annotate.html
examples/: README.md  SRR11125891.SingleM.html  SRR11125891.krona.tsv  SRR11125891.lineages.json  SRR11125891.singleM.profile.tsv  SRR11125891.summarized.csv  SRR11125891.summarized.html  SRR11125891.t0.gather.with-lineages.csv  SRR11125891.tax_annotate.html  SRR606249.x.podar.tax.csv  Snakefile  simple-output.py
pages/: SRR11125891.SingleM.html  SRR11125891.singleM.html  SRR11125891.summarized.html  SRR11125891.tax_annotate.html  SRR606249.x.podar.tax.html  small.tax.html
quickstart/: index.html
search/: search_index.json
src/taxburst/: __init__.py  checks.py  output.py  parsers.py  taxinfo.py  tree_utils.py
src/taxburst/templates/: krona-fill.html  krona-header.html  krona.html
templates/: krona-template.html
test_workflow/: Snakefile
tests/: taxburst_tst_utils.py  test_basic.py  test_checks.py  test_main.py  test_parse_SingleM.py  test_parse_csv_summary.py  test_parse_krona.py  test_parse_singleM.py  test_parse_tax_annotate.py  test_tree_utils.py
