[project]
name = "taxburst"
description = "sunburst plots for taxonomy"
readme = "README.md"
requires-python = ">=3.11"
version = "0.3.2"
authors = [
  {name = "Titus Brown", email = "titus@idyll.org"},
]

dependencies = ["pytest>=8.3.4,<9", "jinja2>=3.1.2,<4"]

[metadata]
license = { text = "BSD 3-Clause License" }

[project.scripts]
"taxburst" = "taxburst.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.html"]
